<resources>
    <string name="app_name">AMMA</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Existing user?Login</string>
    <string name="click_to_register">New User?Register</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mother_email">Mother Email</string>
    <string name="husband_email">Husband Email</string>
    <string name="profile">Profile</string>
    <string name="community">Community</string>
    <string name="mental_health">Mental Health</string>
    <string name="reminder">Reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Food</string>
    <string name="music">Music</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
    <string name="pregnancy_music_for_mother_and_unborn_baby_baby_brain_development_music_music_for_pregnant_women">pregnancy_music_for_mother_and_unborn_baby_baby_brain_development_music_music_for_pregnant_women</string>
    <string name="pregnancy_music_for_the_unborn_baby_brain_development_classical_music_for_the_baby_in_the_womb">Pregnancy music for the unborn baby ♡ Brain development ♡ Classical music for the baby in the womb</string>
    <string name="pregnancy_music_for_baby_in_womb_brain_development_relaxing_soothing_music_for_pregnant_women">Pregnancy Music for Baby in Womb | Brain Development | Relaxing Soothing Music For Pregnant Women</string>
    <string name="meditation_during_meditation_tips_for_pregnant_women_guided_mediation_radhika_agarwal">Meditation During 𝐏𝐑𝐄𝐆𝐀𝐍𝐂𝐘 | Meditation Tips for Pregnant Women | Guided Mediation | Radhika Agarwal</string>
    <string name="learn_how_to_meditate_during_pregnancy_hindi">Learn How To Meditate During Pregnancy (HINDI)</string>
    <string name="powerful_womb_healing_meditation_pregnancy_mantras_garbh_sanskar_mantras">POWERFUL Womb healing meditation | Pregnancy Mantras | Garbh Sanskar Mantras |</string>
    <string name="yoga_for_pregnancy_in_hindi_i_1_3_months_full_practice">Yoga for Pregnancy in Hindi I 1-3 Months (FULL PRACTICE)</string>
    <string name="yoga_for_pregnant_women_part_1_mp4">YOGA FOR PREGNANT WOMEN PART 1.mp4</string>
    <string name="yoga_for_pregnant_women_part_2_mp4">YOGA FOR PREGNANT WOMEN PART 2.mp4</string>
    <string name="pregnancy_music_to_make_baby_move_brain_development_relaxing_soothing_music_for_pregnant_women">Pregnancy Music to Make Baby Move | Brain Development | Relaxing Soothing Music For Pregnant Women</string>
    <string name="pregnancy_music_for_mother_and_unborn_baby_relaxing_peaceful_soothing_music_for_pregnant_women">Pregnancy Music For Mother And Unborn Baby | Relaxing Peaceful Soothing Music For Pregnant Women</string>
    <string name="meditation_prayer_during_pregnancy_for_women_in_hindi">Meditation Prayer during Pregnancy For women in Hindi</string>
    <string name="garbh_geeta_in_pregnancy">Garbh Geeta In Pregnancy</string>
    <string name="santhana_gopala_mantra_108_times_mantra_for_pregnancy_garbharaksha_sloka">Santhana Gopala Mantra - 108 Times - Mantra for Pregnancy - Garbharaksha Sloka</string>
    <string name="pregnancy_yoga_for_4_6_months_in_hindi_part_1_full_practice">Pregnancy Yoga for 4-6 Months in Hindi Part 1 (FULL PRACTICE)</string>
    <string name="_4_month_pregnancy_workout_week_13_16">4 Month Pregnancy Workout | Week 13-16</string>
    <string name="pregnancy_yoga_beginner_techniques_episode_1_tonic">Pregnancy Yoga: Beginner Techniques | Episode 1 | Tonic</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="_1st_trimester">1st Trimester</string>
    <string name="_2nd_trimester">2nd Trimester</string>
    <string name="_3rd_trimester">3rd Trimester</string>
    <string name="your_profile">Your Profile</string>
    <string name="user_email">User Email:</string>
    <string name="hus_email">Husband Email:</string>
    <string name="mot_email">Mother Email:</string>
    <string name="food1">Food</string>
    <string name="music1">Music</string>
    <string name="meditation1">Meditation</string>
    <string name="yoga1">Yoga</string>
    <string name="yris">Your Reminder is Set</string>
    <string name="ra">Reminder Activated</string>
    <string name="yrtr">You responded to the reminder</string>
    <string name="ydtr">You dismissed the reminder</string>
    <string name="ok_button_text">OK</string>
    <string name="dismiss_button_text">Dismiss</string>
    <string name="ee">Enter email</string>
    <string name="ep">Enter password</string>
    <string name="ls">Login Successful</string>
    <string name="af">Authentication failed</string>
    <string name="pht">Password has to be >6 characters</string>
    <string name="ecp">Enter confirm password</string>
    <string name="pnm">Passwords not matching</string>
    <string name="eme">Enter mother email</string>
    <string name="ehe">Enter husband email</string>
    <string name="ac">Account created</string>
    <string name="special_music_for_unborn_baby_brain_development_pregnancy_music">Special Music for Unborn Baby | Brain Development | Pregnancy Music</string>
    <string name="pregnancy_music_gharbha_samvardhini_nada">Pregnancy music: GHARBHA SAMVARDHINI NADA</string>
    <string name="mantras_for_healthy_baby_during_pregnancy_santhanagopala_gayathri_mantra_for_fetus_garbha_sanskar">Mantras For Healthy Baby During Pregnancy | Santhanagopala Gayathri Mantra For Fetus -Garbha Sanskar</string>
    <string name="_10_minutes_guided_meditation_meditation_for_anxiety_depression_by_dr_kashika_jain_hindi"><![CDATA[10-Minutes Guided Meditation| Meditation For Anxiety & Depression by Dr Kashika Jain| Hindi]]></string>
    <string name="shiva_mantra_to_remove_all_negative_thoughts">SHIVA MANTRA TO REMOVE ALL NEGATIVE THOUGHTS</string>
    <string name="remove_fear_in_12_mins_with_shiva_rudra_mantra_powerful_shiva_mantra">REMOVE FEAR in 12 mins with Shiva Rudra Mantra POWERFUL SHIVA MANTRA</string>
    <string name="part_1_i_pregnancy_yoga_for_7_9_months_in_hindi_part_1_full_practice">Part 1 I Pregnancy Yoga for 7-9 Months in Hindi Part 1 (FULL PRACTICE)</string>
    <string name="part_2_i_pregnancy_yoga_for_7_9_months_in_hindi_part_2_full_practice">Part 2 I Pregnancy Yoga for 7-9 Months in Hindi Part 2 (FULL PRACTICE)</string>
    <string name="pregnancy_yoga_third_trimester">Pregnancy Yoga Third Trimester</string>
</resources>