<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background1"
    tools:context=".Yoga1Fragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Video 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yoga_for_pregnancy_in_hindi_i_1_3_months_full_practice"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="lYnMGVhrN-4"
                app:autoPlay="true"/>
        </LinearLayout>

        <!-- Video 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yoga_for_pregnant_women_part_1_mp4"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="oj0zPaL3FmE"
                app:autoPlay="true" />
        </LinearLayout>

        <!-- Video 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yoga_for_pregnant_women_part_2_mp4"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="aQY5lkDQLL8"
                app:autoPlay="true"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
