<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background2"
    tools:context=".Meditation2Fragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Video 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meditation_prayer_during_pregnancy_for_women_in_hindi"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="DOgDRUJq0Jo"
                app:autoPlay="true"/>
        </LinearLayout>

        <!-- Video 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garbh_geeta_in_pregnancy"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="JG70wdp3urU"
                app:autoPlay="true" />
        </LinearLayout>

        <!-- Video 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/santhana_gopala_mantra_108_times_mantra_for_pregnancy_garbharaksha_sloka"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="#000000"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="0hkZCM_UTXU"
                app:autoPlay="true"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
